--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongodb": "^6.3.0",
     "mongoose": "^7.6.1",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
