--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "auto": "^11.0.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongoose": "^7.6.1",
+    "increment": "^0.0.1",
+    "mongoose": "^7.6.7",
+    "mongoose-auto-increment": "^5.0.1",
     "nodemon": "^3.0.1"
   },
   "devDependencies": {
