--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.3.0",
     "mongoose": "^5.7.0",
     "mongoose-auto-increment": "^5.0.1",
+    "mongoose-sequence": "^6.0.0",
     "nodemon": "^3.0.2"
   }
 }
